pip to python in classroom.yml

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Unit Tests
         run: |
           cd LAB1
-          pip ./manage.py test
+          python ./manage.py test
 
 
       # TODO build, test and deploy project
